RESOLVED FIXED43520
[Qt] Fix coding style errors in ClipboardQt.h
https://bugs.webkit.org/show_bug.cgi?id=43520
Summary [Qt] Fix coding style errors in ClipboardQt.h
Anders Bakken
Reported 2010-08-04 16:32:17 PDT
[Qt] Fix coding style errors in ClipboardQt.h
Attachments
Fosdem patch :) (5.03 KB, patch)
2011-02-06 12:09 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2011-02-06 12:09:18 PST
Created attachment 81424 [details] Fosdem patch :)
WebKit Commit Bot
Comment 2 2011-02-06 15:48:49 PST
Comment on attachment 81424 [details] Fosdem patch :) Clearing flags on attachment: 81424 Committed r77779: <http://trac.webkit.org/changeset/77779>
WebKit Commit Bot
Comment 3 2011-02-06 15:48:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.