2011-02-06  Benjamin Poulain  <ikipou@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix coding style errors in ClipboardQt.h
        https://bugs.webkit.org/show_bug.cgi?id=43520

        Fix coding style: order of header and indentation.

        * platform/qt/ClipboardQt.h:
        (WebCore::ClipboardQt::create):
        (WebCore::ClipboardQt::clipboardData):
        (WebCore::ClipboardQt::invalidateWritableData):

Canonical link: https://commits.webkit.org/67841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77779 268f45cc-cd09-0410-ab3c-d52691b4dbfc